--- a/config/application.example.yml
+++ b/config/application.example.yml
@@ -7,5 +7,6 @@
 # makes 'Your_Gmail_Username' available as ENV["GMAIL_USERNAME"]
 # Add application configuration variables here, as shown below.
 #
-# GMAIL_USERNAME: changeme
-# GMAIL_PASSWORD: changeme
+AWS_ACCESS_KEY_ID: ''
+AWS_SECRET_ACCESS_KEY: ''
+AWS_DEFAULT_REGION: ''
